add class user,client e address, add de filtros de busca nos services